# brabias

./: .gitignore  config.py  main.py  pyproject.toml  system_prompt.txt
models/: lily_db.py
provider/: open_ai_provider.py
roteiros/: A Cartomante.txt  Antes que o Mundo Acabe.txt  As Melhores Coisas do Mundo.txt  Batismo de Sangue.txt  Bens Confiscados.txt  Cabra-Cega.txt  Carro de Paulista.txt  Casa de Meninas.txt  Chega de Saudade.txt  Cidade dos Homens.txt  Como Fazer um Filme de Amor.txt  De Passagem.txt  Dois Córregos.txt  Dores & Amores.txt  E Proibido Fumar.txt  Feliz Ano Velho.txt  Feliz Natal.txt  Jogo Subterrâneo.txt  Não por Acaso.txt  O Ano em Que Meus Pais Saíram de Férias.txt  O Bandido da Luz Vermelha.txt  O Caso dos Irmãos Naves.txt  O Caçador de Diamantes.txt  O Contador de Histórias.txt  O Céu de Suely.txt  O Homem Que Virou Suco.txt  Olhos Azuis.txt  Onde Andará Dulce Veiga.txt  Os 12 Trabalhos.txt  Os Famosos e os Duendes da Morte.txt  Quanto Vale ou É por Quilo.txt  Salve Geral.txt  Viva-Voz.txt  Zuzu Angel.txt
scripts/: build_lily.py
